// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdProvider Unsupported method should throw 1`] = `[Error: Unsupported method: 3id_notSupported]`;

exports[`ThreeIdProvider Unsupported method should throw 2`] = `"Unsupported method: 3id_notSupported"`;

exports[`ThreeIdProvider asymmetrically decrypt correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "decrypted data",
}
`;

exports[`ThreeIdProvider asymmetrically decrypt correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "decrypted data",
}
`;

exports[`ThreeIdProvider asymmetrically encrypt correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "encrypted data",
}
`;

exports[`ThreeIdProvider asymmetrically encrypt correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "encrypted data",
}
`;

exports[`ThreeIdProvider authenticate correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "auth data",
}
`;

exports[`ThreeIdProvider authenticate correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "auth data",
}
`;

exports[`ThreeIdProvider authenticate correctly 3`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "auth data",
}
`;

exports[`ThreeIdProvider decrypt correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "decrypted data",
}
`;

exports[`ThreeIdProvider decrypt correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "decrypted data",
}
`;

exports[`ThreeIdProvider encrypt correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "encrypted data",
}
`;

exports[`ThreeIdProvider encrypt correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "encrypted data",
}
`;

exports[`ThreeIdProvider getLink correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "link",
}
`;

exports[`ThreeIdProvider getLink correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "link",
}
`;

exports[`ThreeIdProvider hash entry key correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "hashed data",
}
`;

exports[`ThreeIdProvider hash entry key correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "hashed data",
}
`;

exports[`ThreeIdProvider isAuthenticated correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": true,
}
`;

exports[`ThreeIdProvider isAuthenticated correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": true,
}
`;

exports[`ThreeIdProvider linkManagementKey correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "link data",
}
`;

exports[`ThreeIdProvider linkManagementKey correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "link data",
}
`;

exports[`ThreeIdProvider sign claim correctly 1`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "signed claim",
}
`;

exports[`ThreeIdProvider sign claim correctly 2`] = `
Object {
  "id": 1,
  "json-rpc": "2.0",
  "result": "signed claim",
}
`;
